namespace Allors.Core.Database.Engines.Meta
{
    /// <summary>
    /// An object type.
    /// </summary>
    public abstract class Composite : ObjectType
    {
    }
}
