namespace Allors.Core.Database.Engines.Meta
{
    using Allors.Core.Meta.Domain;
    using Allors.Core.Meta.Meta;

    /// <summary>
    /// A unit.
    /// </summary>
    public sealed class Interface : Composite
    {
    }
}
