namespace Allors.Core.Database.Engines.Meta
{
    /// <summary>
    /// A role type.
    /// </summary>
    public abstract class RoleType : RelationEndType
    {
    }
}
