namespace Allors.Core.Database.Engines.Meta
{
    using Allors.Core.Meta.Domain;

    /// <summary>
    /// A type.
    /// </summary>
    public abstract class Type : MetaObject
    {
    }
}
