classDiagram
    class AssociationType
    <<interface>> AssociationType
    RelationEndType <|-- AssociationType
    AssociationType o-- Composite
    class BinaryAssociationType
    UnitAssociationType <|-- BinaryAssociationType
    class BinaryRoleType
    UnitRoleType <|-- BinaryRoleType
    class BooleanAssociationType
    UnitAssociationType <|-- BooleanAssociationType
    class BooleanRoleType
    UnitRoleType <|-- BooleanRoleType
    class Class
    Composite <|-- Class
    class Composite
    <<interface>> Composite
    ObjectType <|-- Composite
    Composite o-- Class : Concretes
    Composite o-- Interface : DirectSupertypes
    Composite o-- MethodType
    Composite o-- Interface : Supertypes
    class CompositeAssociationType
    <<interface>> CompositeAssociationType
    AssociationType <|-- CompositeAssociationType
    class CompositeRoleType
    <<interface>> CompositeRoleType
    RoleType <|-- CompositeRoleType
    class ConcreteMethodType
    ConcreteMethodType : Actions Actions
    ConcreteMethodType o-- Class
    ConcreteMethodType o-- MethodPart
    class DateTimeAssociationType
    UnitAssociationType <|-- DateTimeAssociationType
    class DateTimeRoleType
    UnitRoleType <|-- DateTimeRoleType
    class DecimalAssociationType
    UnitAssociationType <|-- DecimalAssociationType
    class DecimalRoleType
    UnitRoleType <|-- DecimalRoleType
    DecimalRoleType : Integer AssignedPrecision
    DecimalRoleType : Integer AssignedScale
    DecimalRoleType : Integer DerivedPrecision
    DecimalRoleType : Integer DerivedScale
    class Domain
    MetaIdentifiableObject <|-- Domain
    Domain : String Name
    Domain o-- Domain : Superdomains
    Domain o-- Type
    class FloatAssociationType
    UnitAssociationType <|-- FloatAssociationType
    class FloatRoleType
    UnitRoleType <|-- FloatRoleType
    class Inheritance
    Inheritance o-- Composite : Subtype
    Inheritance o-- Interface : Supertype
    class IntegerAssociationType
    UnitAssociationType <|-- IntegerAssociationType
    class IntegerRoleType
    UnitRoleType <|-- IntegerRoleType
    class Interface
    Composite <|-- Interface
    class ManyToAssociationType
    <<interface>> ManyToAssociationType
    CompositeAssociationType <|-- ManyToAssociationType
    class ManyToManyAssociationType
    ManyToAssociationType <|-- ManyToManyAssociationType
    class ManyToManyRoleType
    ToManyRoleType <|-- ManyToManyRoleType
    class ManyToOneAssociationType
    ManyToAssociationType <|-- ManyToOneAssociationType
    class ManyToOneRoleType
    ToOneRoleType <|-- ManyToOneRoleType
    class MetaIdentifiableObject
    <<interface>> MetaIdentifiableObject
    MetaIdentifiableObject : Unique Id
    class MethodPart
    MethodPart : Action Action
    MethodPart o-- Composite
    MethodPart o-- Domain
    class MethodType
    MethodType o-- ConcreteMethodType
    MethodType o-- MethodPart
    MethodType : String Name
    class ObjectType
    <<interface>> ObjectType
    Type <|-- ObjectType
    ObjectType : String AssignedPluralName
    ObjectType : String DerivedPluralName
    ObjectType : String SingularName
    class OneToAssociationType
    <<interface>> OneToAssociationType
    CompositeAssociationType <|-- OneToAssociationType
    class OneToManyAssociationType
    OneToAssociationType <|-- OneToManyAssociationType
    class OneToManyRoleType
    ToManyRoleType <|-- OneToManyRoleType
    class OneToOneAssociationType
    OneToAssociationType <|-- OneToOneAssociationType
    class OneToOneRoleType
    ToOneRoleType <|-- OneToOneRoleType
    class OperandType
    <<interface>> OperandType
    Type <|-- OperandType
    class RelationEndType
    <<interface>> RelationEndType
    OperandType <|-- RelationEndType
    RelationEndType : Boolean IsMany
    class RoleType
    <<interface>> RoleType
    RelationEndType <|-- RoleType
    RoleType : String AssignedPluralName
    RoleType o-- AssociationType
    RoleType : String DerivedPluralName
    RoleType : String Name
    RoleType o-- ObjectType
    RoleType : String SingularName
    class StringAssociationType
    UnitAssociationType <|-- StringAssociationType
    class StringRoleType
    UnitRoleType <|-- StringRoleType
    StringRoleType : Integer AssignedSize
    StringRoleType : Integer DerivedSize
    class ToManyRoleType
    <<interface>> ToManyRoleType
    CompositeRoleType <|-- ToManyRoleType
    class ToOneRoleType
    <<interface>> ToOneRoleType
    CompositeRoleType <|-- ToOneRoleType
    class Type
    <<interface>> Type
    MetaIdentifiableObject <|-- Type
    class UniqueAssociationType
    UnitAssociationType <|-- UniqueAssociationType
    class UniqueRoleType
    UnitRoleType <|-- UniqueRoleType
    class Unit
    ObjectType <|-- Unit
    class UnitAssociationType
    <<interface>> UnitAssociationType
    AssociationType <|-- UnitAssociationType
    class UnitRoleType
    <<interface>> UnitRoleType
    RoleType <|-- UnitRoleType
